--- a/index.html
+++ b/index.html
@@ -38,6 +38,54 @@
       font-weight: bold;
       letter-spacing: 1px;
     }
+    #next-level-box {
+      position: fixed;
+      top: 120px;
+      left: 24px;
+      background: linear-gradient(135deg, #ffe0ba 0%, #fff5c3 100%);
+      border-radius: 22px;
+      box-shadow: 0 4px 24px #ffe0ba77, 0 2px 10px #ffd79f66;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-width: 200px;
+      max-width: 245px;
+      padding: 1em 1.1em 1em 1.1em;
+      font-size: 1.13em;
+      font-weight: bold;
+      color: #cc8400;
+      border: 3px solid #fcb069;
+      z-index: 110;
+      transition: box-shadow 0.15s;
+    }
+    #next-level-title {
+      font-size: 1.1em;
+      margin-bottom: 0.2em;
+      color: #ff7eb3;
+      font-weight: bold;
+      text-align: center;
+    }
+    #next-level-img {
+      width: 48px;
+      height: 48px;
+      margin-bottom: 0.3em;
+      border-radius: 12px;
+      box-shadow: 0 1px 8px #ffe0ba77;
+      background: #fff8e1;
+      object-fit: contain;
+      margin-top: 0.2em;
+    }
+    #next-level-desc {
+      font-size: 1.08em;
+      margin-bottom: 0.2em;
+      text-align: center;
+    }
+    #next-level-progress {
+      color: #fb5dad;
+      font-size: 0.98em;
+      text-align: center;
+    }
     #rebirth-section {
       position: fixed;
       top: 90px;
@@ -77,6 +125,22 @@
       margin-bottom: 0.6rem;
       color: #e67c7c;
     }
+    #rebirth-super-cash {
+      font-size: 1.1rem;
+      margin-bottom: 0.6rem;
+      color: #ff8c2b;
+      display: flex;
+      align-items: center;
+      gap: 0.4em;
+      font-weight: bold;
+    }
+    #rebirth-super-cash img {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+      margin-left: 2px;
+      margin-right: 2px;
+    }
     #rebirth-count {
       font-size: 1.2rem;
       color: #fb5dad;
@@ -88,6 +152,112 @@
       color: #21c87a;
       font-weight: bold;
     }
+    #super-money-display {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.65em;
+      font-size: 2.3rem;
+      font-weight: bold;
+      margin-bottom: 1.2rem;
+      color: #ff8c2b;
+      user-select: none;
+      background: linear-gradient(90deg, #ffecd2 60%, #ffe0ba 100%);
+      border-radius: 2.2em 1.7em 2.2em 1.7em / 1.6em 2.2em 1.6em 2.2em;
+      box-shadow: 0 4px 24px #ffe0ba99, 0 2px 10px #ffd79f66;
+      min-width: 320px;
+      min-height: 70px;
+      width: fit-content;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0.2em 1.6em;
+      border: 4px solid #fcb069;
+    }
+    #super-money-logo {
+      width: 54px;
+      height: 54px;
+      vertical-align: middle;
+      display: inline-block;
+      filter: drop-shadow(0 1px 4px #fff5c3);
+    }
+    #super-shop-tab {
+      position: fixed;
+      top: 40%;
+      left: 0;
+      background: #ff7eb3;
+      color: #fff;
+      font-weight: bold;
+      padding: 16px 12px;
+      border-radius: 0 10px 10px 0;
+      font-size: 1.2rem;
+      cursor: pointer;
+      box-shadow: 2px 2px 10px #80808033;
+      z-index: 999;
+      transition: background 0.2s, transform 0.12s;
+      writing-mode: vertical-rl;
+      text-orientation: mixed;
+      letter-spacing: 2px;
+      user-select: none;
+    }
+    #super-shop-tab:hover {
+      background: #fb5dad;
+      transform: scale(1.05);
+    }
+    #shop-page, #game-page {
+      display: none;
+    }
+    #game-page.active, #shop-page.active {
+      display: block;
+    }
+    #shop-page {
+      background: linear-gradient(135deg, #ffe5ec 0%, #fad0c4 100%);
+      min-height: 100vh;
+      padding-top: 60px;
+      z-index: 10;
+      position: relative;
+    }
+    #shop-header {
+      color: #ff7eb3;
+      font-size: 2.2rem;
+      margin-bottom: 1.5rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+    #shop-super-money {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.45em;
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #ff8c2b;
+      margin-bottom: 2rem;
+      user-select: none;
+    }
+    #shop-super-money img {
+      width: 34px;
+      height: 34px;
+      vertical-align: middle;
+      display: inline-block;
+    }
+    #back-to-game {
+      background: #ff7eb3;
+      color: #fff;
+      padding: 0.6rem 2.5rem;
+      border-radius: 14px;
+      font-weight: bold;
+      font-size: 1.1rem;
+      border: none;
+      cursor: pointer;
+      margin-top: 2rem;
+      box-shadow: 0 2px 8px #ffd6e0;
+      transition: background 0.2s;
+    }
+    #back-to-game:hover {
+      background: #fb5dad;
+    }
+    /* Hide rebirth on shop */
+    #shop-page #rebirth-section { display: none; }
     #character-btn {
       background: none;
       border: none;
@@ -170,43 +340,102 @@
         min-width: 0;
         max-width: 98vw;
       }
+      #super-shop-tab {
+        top: unset;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        writing-mode: unset;
+        text-orientation: unset;
+        border-radius: 10px 10px 0 0;
+        padding: 10px 50px;
+        font-size: 1.1rem;
+      }
+      #super-money-display {
+        min-width: 180px;
+        min-height: 48px;
+        font-size: 1.3rem;
+        padding: 0.15em 0.7em;
+      }
+      #super-money-logo {
+        width: 30px;
+        height: 30px;
+      }
+      #next-level-box {
+        position: static;
+        margin: 0.5em auto 1.2em auto;
+        max-width: 98vw;
+        min-width: 0;
+        left: 0;
+        right: 0;
+        top: unset;
+        font-size: 1em;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Cute Clicker</h1>
-  <div id="level">Level 0: Mushroom</div>
-  <div id="counter">0</div>
-  <button id="character-btn" aria-label="Click the mushroom!">
-    <img
-      id="character-img"
-      src="https://i.imgur.com/MVDFWs3.png"
-      alt="Cute Mushroom"
-    />
-  </button>
-  <div id="click-power">Click Power: 1</div>
-  <div id="cps">Clicks per second: 0</div>
-  <div id="rebirth-section">
-    <div id="rebirth-count">Rebirths: 0</div>
-    <div id="rebirth-multiplier">Rebirth Multiplier: x1</div>
-    <div id="rebirth-info">Rebirth for x1.5 more clicks per click!<br>
-      Cost: <span id="rebirth-cost">100,000,000</span> Clicks
+  <div id="super-shop-tab">Super Shop</div>
+  <div id="game-page" class="active">
+    <h1>Cute Clicker</h1>
+    <div id="super-money-display">
+      <img id="super-money-logo" src="https://i.imgur.com/AbX6z6F.png" alt="Super Money" />
+      <span id="super-money-amount">0</span>
     </div>
-    <button id="rebirth-btn" disabled>Rebirth!</button>
+    <div id="next-level-box">
+      <div id="next-level-title">Next Level: Flower</div>
+      <img id="next-level-img" src="https://i.imgur.com/YF9nP2m.png" alt="Next Level" />
+      <div id="next-level-desc">Reach <span id="next-level-req">1,000</span> clicks to unlock!</div>
+      <div id="next-level-progress">
+        <span id="next-level-current">0</span> / <span id="next-level-total">1,000</span> clicks
+      </div>
+    </div>
+    <div id="level">Level 0: Mushroom</div>
+    <div id="counter">0</div>
+    <button id="character-btn" aria-label="Click the mushroom!">
+      <img
+        id="character-img"
+        src="https://i.imgur.com/MVDFWs3.png"
+        alt="Cute Mushroom"
+      />
+    </button>
+    <div id="click-power">Click Power: 1</div>
+    <div id="cps">Clicks per second: 0</div>
+    <div id="rebirth-section">
+      <div id="rebirth-count">Rebirths: 0</div>
+      <div id="rebirth-multiplier">Rebirth Multiplier: x1</div>
+      <div id="rebirth-super-cash">
+        Next Rebirth: <span id="rebirth-super-cash-amount">50</span>
+        <img src="https://i.imgur.com/AbX6z6F.png" alt="Super Money" />
+      </div>
+      <div id="rebirth-info">Rebirth for x1.5 more clicks per click!<br>
+        Cost: <span id="rebirth-cost">100,000,000</span> Clicks
+      </div>
+      <button id="rebirth-btn" disabled>Rebirth!</button>
+    </div>
+    <div class="upgrade-section">
+      <h2>Upgrades</h2>
+      <button id="auto-click" class="upgrade-btn" disabled>
+        Buy Auto Clicker (Cost: <span id="auto-cost">50</span>)
+      </button>
+      <br />
+      <button id="double-click" class="upgrade-btn" disabled>
+        Double Click Power (Cost: <span id="double-cost">30</span>)
+      </button>
+      <br />
+      <button id="super-click" class="upgrade-btn" disabled>
+        Super Click Power (Cost: <span id="super-cost">100</span>)
+      </button>
+    </div>
   </div>
-  <div class="upgrade-section">
-    <h2>Upgrades</h2>
-    <button id="auto-click" class="upgrade-btn" disabled>
-      Buy Auto Clicker (Cost: <span id="auto-cost">50</span>)
-    </button>
-    <br />
-    <button id="double-click" class="upgrade-btn" disabled>
-      Double Click Power (Cost: <span id="double-cost">30</span>)
-    </button>
-    <br />
-    <button id="super-click" class="upgrade-btn" disabled>
-      Super Click Power (Cost: <span id="super-cost">100</span>)
-    </button>
+  <div id="shop-page">
+    <div id="shop-header">Super Shop</div>
+    <div id="shop-super-money">
+      <img src="https://i.imgur.com/AbX6z6F.png" alt="Super Money" />
+      <span id="shop-super-money-amount">0</span>
+    </div>
+    <p style="font-size:1.2rem;">Welcome to the Super Shop! (Add your shop items here!)</p>
+    <button id="back-to-game">Back to Game</button>
   </div>
   <script>
     let count = 0;
@@ -223,8 +452,11 @@
     // Rebirth system
     let rebirths = 0;
     let rebirthCost = 100000000; // 100,000,000
-    let rebirthMultiplier = 1; // Stays at 1 until first rebirth, then 1.5, 2.0, etc.
+    let rebirthMultiplier = 1;
     const REBIRTH_COST_INCREMENT = 50000000; // 50,000,000
+
+    // Super money system
+    let superMoney = 0;
 
     const LEVELS = [
       {
@@ -245,7 +477,17 @@
       {
         name: "Dog",
         img: "https://i.imgur.com/y9pnozS.png",
-        minClicks: 10000000,
+        minClicks: 5000000,
+      },
+      {
+        name: "Fox",
+        img: "https://i.imgur.com/DWBsqzH.png",
+        minClicks: 15000000,
+      },
+      {
+        name: "Cow",
+        img: "https://i.imgur.com/4QTiWho.png",
+        minClicks: 50000000,
       }
     ];
 
@@ -265,6 +507,39 @@
     const rebirthCostSpan = document.getElementById('rebirth-cost');
     const rebirthCount = document.getElementById('rebirth-count');
     const rebirthMultiplierSpan = document.getElementById('rebirth-multiplier');
+    const rebirthSuperCashAmount = document.getElementById('rebirth-super-cash-amount');
+    const superMoneyDisplay = document.getElementById('super-money-amount');
+    const shopSuperMoneyDisplay = document.getElementById('shop-super-money-amount');
+
+    // Next level box elements
+    const nextLevelBox = document.getElementById('next-level-box');
+    const nextLevelTitle = document.getElementById('next-level-title');
+    const nextLevelImg = document.getElementById('next-level-img');
+    const nextLevelReq = document.getElementById('next-level-req');
+    const nextLevelCurrent = document.getElementById('next-level-current');
+    const nextLevelTotal = document.getElementById('next-level-total');
+
+    // Shop tab/page
+    const superShopTab = document.getElementById('super-shop-tab');
+    const gamePage = document.getElementById('game-page');
+    const shopPage = document.getElementById('shop-page');
+    const backToGameBtn = document.getElementById('back-to-game');
+
+    superShopTab.addEventListener('click', () => {
+      gamePage.classList.remove('active');
+      shopPage.classList.add('active');
+      updateSuperMoneyDisplays();
+    });
+
+    backToGameBtn.addEventListener('click', () => {
+      shopPage.classList.remove('active');
+      gamePage.classList.add('active');
+      updateSuperMoneyDisplays();
+    });
+
+    function getNextRebirthSuperCash() {
+      return (rebirths + 1 > 10) ? 100 : 50;
+    }
 
     function funFlash() {
       counter.style.color = "#fb5dad";
@@ -292,9 +567,23 @@
       }
     }
 
+    function updateNextLevelBox() {
+      let nextIdx = currentLevel + 1;
+      if (nextIdx < LEVELS.length) {
+        nextLevelBox.style.display = "flex";
+        nextLevelTitle.textContent = `Next Level: ${LEVELS[nextIdx].name}`;
+        nextLevelImg.src = LEVELS[nextIdx].img;
+        nextLevelImg.alt = `Next Level: ${LEVELS[nextIdx].name}`;
+        nextLevelReq.textContent = LEVELS[nextIdx].minClicks.toLocaleString();
+        nextLevelTotal.textContent = LEVELS[nextIdx].minClicks.toLocaleString();
+        nextLevelCurrent.textContent = count.toLocaleString();
+      } else {
+        nextLevelBox.style.display = "none";
+      }
+    }
+
     function formatRebirthMultiplier(mult) {
-      // Show integer if whole number, else show one or two decimals
-      return Number.isInteger(mult) ? mult.toString() : mult.toFixed(2).replace(/\.00$/, '');
+      return Number.isInteger(mult) ? mult.toString() : mult.toFixed(1).replace(/\.0$/, '');
     }
 
     function updateRebirthDisplay() {
@@ -302,10 +591,15 @@
       rebirthMultiplierSpan.textContent = "Rebirth Multiplier: x" + formatRebirthMultiplier(rebirthMultiplier);
       rebirthCostSpan.textContent = rebirthCost.toLocaleString();
       rebirthBtn.disabled = count < rebirthCost;
+      rebirthSuperCashAmount.textContent = getNextRebirthSuperCash();
+    }
+
+    function updateSuperMoneyDisplays() {
+      superMoneyDisplay.textContent = superMoney.toLocaleString();
+      shopSuperMoneyDisplay.textContent = superMoney.toLocaleString();
     }
 
     function recalcClickPower() {
-      // Base is 1, plus upgrades, times rebirth multiplier
       clickPower = clickPowerBase * Math.pow(2, doubleClickLevel) + (superClickLevel > 0 ? 10 * superClickLevel : 0);
       clickPower *= rebirthMultiplier;
       clickPowerDisplay.textContent = 'Click Power: ' + clickPower.toFixed(2);
@@ -323,6 +617,8 @@
       superClickBtn.disabled = count < superClickCost;
       updateLevel();
       updateRebirthDisplay();
+      updateSuperMoneyDisplays();
+      updateNextLevelBox();
     }
 
     characterBtn.addEventListener('click', () => {
@@ -368,6 +664,11 @@
         count -= rebirthCost;
         rebirths++;
         rebirthMultiplier = 1 + rebirths * 0.5;
+        if (rebirths <= 10) {
+          superMoney += 50;
+        } else {
+          superMoney += 100;
+        }
         count = 0;
         autoClickers = 0;
         autoClickerCost = 50;
